--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,19 +1,29 @@
 name: payment
 description: "A new Flutter project."
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
-  sdk: '>=3.2.0 <4.0.0'
+  sdk: ">=3.2.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
+  flutter_svg: ^2.0.9
 
 dev_dependencies:
+  flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - assets/images/
+
+flutter_assets:
+  assets_path: assets/images
+  output_path: lib/core/utils
+  filename: app_assets.dart
+  field_prefix: null
