--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   dio: ^5.4.0
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.4
   flutter_credit_card: ^4.0.1
   flutter_stripe: ^10.0.0
   flutter_svg: ^2.0.9
