--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.4
   flutter_credit_card: ^4.0.1
+  flutter_paypal_payment: ^1.0.6
   flutter_stripe: ^10.0.0
   flutter_svg: ^2.0.9
   font_awesome_flutter: ^10.7.0
